[project]
name = "enigma"
version = "1.3.0"
readme = "README.md"
description = "Enigma Machine Emulator for Python."
authors = [
    {name = "Kristian Zarębski",email = "krizar312@gmail.com"}
]
license = {text = "GPL-v3"}
requires-python = ">=3.10,<3.15"
dependencies = []

[project.scripts]
enigma = 'enigma.terminal_app:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "hypothesis>=6.147.0",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
]
